完善JS扩展